# os-21206-5th-semester-fit-nsu

./: .gitignore  README.md
first/3/: 5_threads.c  5_threads_2.c  thread.c
first/3-grade/1_1/: 5_threads.c  5_threads_2.c  5_threads_3.c  thread.c
first/3-grade/1_2/: a.c  b.c  c.c  d.c  e.c  g.c
first/3-grade/1_3/: a.c  b.c
first/3-grade/1_4/: a.c  b.c  b_cancel.c  c.c
first/3-grade/1_5/: a.c
first/4-grade/: CMakeLists.txt  main.c  my-core-threads.c  my-core-threads.h
first/5-grade/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c  my-coroutine.c  my-coroutine.h
second/3-grade/2_1/sync/: queue-example.c  queue-threads.c  queue.c  queue.h
second/3-grade/2_2/a/: main  pthreads_spin_queue_combined.c  queue-threads  queue-threads.c  queue.h  test  test_spin_queue.c
second/3-grade/2_2/d/: main  pthreads_spin_queue_combined.c  queue.c  test  test_spin_queue.c
second/3-grade/2_2/sync/: main  queue-example  queue-threads  queue.h  (+1 more)
second/4-grade/2_3/: mutex.c  rwlock.c  spinlock.c
second/5-grade/my-mutex/: main.c  my-mutex.c  my-mutex.h  test.c
second/5-grade/my-spinlock/: d-main.c  d-spinlock.c  d-spinlock.h  main.c  my-spinlock.c  my-spinlock.h
third/5-grade/http-proxy/: 1-sequential-test.sh  2-concurrent-test.sh  3-cache-invalidation.sh  4-parallel-clients.sh  5-large-file.sh  CMakeLists.txt  main.cpp  test.cpp
third/5-grade/http-proxy/httpparser/: httprequestparser.h
third/5-grade/http-proxy/httpproxy/: blockingqueue.h  httpcacher.cpp  httpcacher.h  httpproxy.cpp  httpproxy.h  singlehostserver.cpp  singlehostserver.h
(+24 files in other folders)
